test/extra_close_tag.stderr
error: encountered a closing HTML element "button" without a corresponding opening tag.
 --> test/extra_close_tag.rs:7:11
  |
7 |         </button> // <- random
  |           ^^^^^^
